# rlt2025

./: CLAUDE.md  actions.py  engine.py  entity.py  game_map.py  main.py  pyproject.toml  tile_types.py
data/blueprints/: corridor.yaml  small_room.yaml  stone_house_basic.yaml
examples/: demo.py
src/rlt2025/: actions.py  components.py  engine.py  events.py  game_map.py  input_handlers.py  main.py  spatial.py
src/rlt2025/ecs/: __init__.py  entity_registry.py  event_bus.py  world.py
src/rlt2025/map/: __init__.py  chunks.py  game_map.py  interfaces.py  realm.py  simple_dungeon.py  tile_types.py  tiles.py
src/rlt2025/systems/: chunk_activation.py  time.py  visibility.py
tests/map/: test_chunks.py
